// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering active filters No search tokens 1`] = `
<span
  className="input-group-addon left-addon"
  data-for="structured-query-tooltip"
  data-tip="View Filters"
  onClick={[Function]}
  style={
    Object {
      "background": "lightgrey",
      "borderRadius": 0,
      "cursor": "not-allowed",
      "position": "relative",
    }
  }
>
  <i
    className="far fa-list"
  />
  <span
    className="active-filter-count"
  >
    0
  </span>
</span>
`;

exports[`Rendering active filters Some search tokens passed in 1`] = `
<span
  className="input-group-addon left-addon"
  data-for="structured-query-tooltip"
  data-tip="View Filters"
  onClick={[Function]}
  style={
    Object {
      "background": "white",
      "borderRadius": 0,
      "cursor": "pointer",
      "position": "relative",
    }
  }
>
  <i
    className="far fa-list"
  />
  <span
    className="active-filter-count"
  >
    1
  </span>
</span>
`;
